--- a/react-intro/index.html
+++ b/react-intro/index.html
@@ -11,5 +11,41 @@
 <script src="https://soulwire.github.io/sketch.js/js/sketch.min.js"></script>
 <script src="app.js"></script>
 <script type="text/babel">
-  // React code goes here.
+  function PlayButton(props) {
+  	const className = props.isMusicPlaying ? 'play active' : 'play';
+  	return <a onClick={props.onClick} href="#" title="Play Video" className={className} />;
+  }
+  class Container extends React.Component {
+  	constructor(props) {
+  		super(props);
+  		this.state = { isMusicPlaying: false };
+  	}
+
+  	handleClick() {
+  		if (this.state.isMusicPlaying) {
+  			this.audio.pause();
+  		} else {
+  			this.audio.play();
+  		}
+  		this.setState(prevState => {
+  			return {
+  				isMusicPlaying: !prevState.isMusicPlaying
+  			};
+  		});
+  	};
+
+  	render() {
+  		const status = this.state.isMusicPlaying ? 'Playing :)' : 'Not playing :(';
+  		return (
+  			<div>
+  				<PlayButton
+  					onClick={this.handleClick.bind(this)}
+  					isMusicPlaying={this.state.isMusicPlaying} />
+  				<audio id="audio" ref={(audioTag) => {this.audio = audioTag}} />
+  			</div>
+  		);
+  	}
+  }
+  const placeToPutComponent = document.getElementById('hook');
+  ReactDOM.render(<Container />, placeToPutComponent);
 </script>
